--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
 
   build:
-    name: Build
+    name: Test
     runs-on: ubuntu-latest
     steps:
 
@@ -24,5 +24,5 @@ jobs:
             dep ensure
         fi
 
-    - name: Test
+    - name: Run tests
       run: go test -v ./...
